<resources>
    <string name="app_name">androidnav</string>
    <string name="exam">EXAM</string>
    <string name="nvexam">Exam</string>
    <string name="nvassignment">Assignment</string>
    <string name="nvacademy">Academy</string>
    <string name="nvcollege">College</string>
    <string name="nvprofile">Profile</string>
    <string name="mstudentdetail">studentdetail</string>
    <string name="textprofile">Profile</string>
    <string name="txtassignment">Assignment</string>
    <string name="txtcollege">College</string>
    <string name="txtipt_gptc"><![CDATA[IPT&GPTC]]></string>
    <string name="textipt_gptc"><![CDATA[IPT&GPTC]]></string>
    <string name="txtacademy">Academy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtsettings">Settings</string>
    <string name="adddress">Adddress</string>
    <string name="age">Age</string>
    <string name="admission_no">Admission No</string>
    <string name="no_data">no_data</string>
    <string name="gender">Gender</string>
    <string name="department">Department</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="year">Year</string>
    <string name="d_o_b">D.O.B</string>
    <string name="email_id">Email ID</string>
    <string name="blood_group">Blood Group</string>
    <string name="pincode">Pincode</string>
    <string name="accno">AccountNo</string>
    <string name="adhaarno">AdhaarNo</string>
    <string name="mobileno">MobileNo</string>
    <string name="parent_mob">Parent Mob</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="admno">AdmNo</string>
    <string name="No_data">No data</string>
    <string name="district">District</string>
    <string name="polytechinic_acdamy">Polytechinic_acdamy</string>
    <string name="your_politechnic_classes_scondected_in_online">Your Politechnic classes scondected in online</string>
    <string name="_08_34_pm">08:34 PM</string>
    <string name="your_politechnic_classes_condected_in_online">Your_politechnic_classes_condected_in_online</string>
    <string name="dc_exam">Dc_Exam</string>
    <string name="operating_system">Operating System</string>
    <string name="os_exam_declared_in_next_week">OS exam declared in next week</string>
    <string name="_08_50am">08:50am</string>
    <string name="assignment_notification">Assignment Notification</string>
    <string name="log_out">Log Out</string>
    <string name="about">About</string>
    <string name="service">Service</string>
    <string name="salary">salary</string>
    <string name="notification">Notification</string>
    <string name="others">others</string>
    <string name="assignment">Assignment</string>
    <string name="academy">Academy</string>
    <string name="extra">Extra</string>
    <string name="add_admin">Add Admin</string>
    <string name="manage">Manage</string>
    <string name="study_material">Study material</string>
    <string name="class">class</string>
    <string name="class_txt">Class</string>
</resources>
