<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.add_view_activity"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/add_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/propic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:src="@drawable/userpic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_view"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:id="@+id/add_scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/propic"
        android:layout_marginTop="50dp"
        android:scrollbarThumbVertical="@null">


        <TableLayout

            android:id="@+id/tabla_cuerpo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/traccno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/admno"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <EditText
                android:id="@+id/acno_pva_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/No_data"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>



        <TableRow
            android:id="@+id/trname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/No_data"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/trgender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_weight="1"
                android:text="@string/gender"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <EditText
                android:id="@+id/gender_pva_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/No_data"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/trdepartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_weight="0.9"
                android:text="@string/department"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <EditText
                android:id="@+id/dept_pva_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/No_data"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/tryear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_weight="1"
                android:text="@string/year"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/No_data"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>



        <TableRow
            android:id="@+id/tremailid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/email_id"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <EditText
                android:id="@+id/emailid_pva_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/No_data"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/tradhar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/adhaarno"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <EditText
                android:id="@+id/adharno_pva_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/No_data"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/traccountno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/accno"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <EditText
                android:id="@+id/accno_pva_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/No_data"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>
            <TableRow
                android:id="@+id/trpincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/pincode"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />


                <EditText
                    android:id="@+id/pincode_pva_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/No_data"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>


        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_scroll_view"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="search"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="edit"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="add"
            android:layout_gravity="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>