<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/calllog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:src="@android:drawable/ic_input_get"
                android:tint="@android:color/holo_red_dark"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/icon"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/polytechinic_acdamy"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/notifdetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/group"
                        android:layout_marginBottom="2dp"
                        android:autoSizeMaxTextSize="20sp"
                        android:autoSizeMinTextSize="12sp"
                        android:autoSizeStepGranularity="2sp"
                        android:autoSizeTextType="uniform"
                        android:lineSpacingExtra="8sp"
                        android:text="@string/your_politechnic_classes_condected_in_online"
                        android:textColor="@color/colorPrimaryDark" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dp"
                        android:layout_weight="8">

                        <TextView
                            android:id="@+id/date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:text="@string/_08_34_pm"
                            android:textSize="11sp" />
                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/calllog"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/calllog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>