<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.Activity_card">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    <RelativeLayout
        android:id="@+id/relative_layt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/card_icorn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/userpic" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:orientation="vertical"
            android:layout_below="@+id/card_icorn"
            android:weightSum="2">

            <TableRow
                android:id="@+id/frstrow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/assigment_btn"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/assignment0"
                        android:text="@string/assignment"
                        android:textColor="@android:color/black" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/exam_btn"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/examicorn0"
                        android:text="@string/exam"
                        android:textColor="@android:color/black" />

                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:id="@+id/secndrow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frstrow">

                <androidx.cardview.widget.CardView
                    android:id="@+id/studybtn"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/icon_book"
                        android:drawableTint="@color/cardview_dark_background"
                        android:text="Metirial"
                        android:textColor="@android:color/black" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/insert_profile"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/icorn_addprofile48"
                        android:drawableTint="@color/cardview_dark_background"
                        android:text="Add"
                        android:textColor="@android:color/black" />

                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:id="@+id/thirdrow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/secndrow">

                <androidx.cardview.widget.CardView
                    android:id="@+id/settings_btn"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/settings"
                        android:drawableTint="@color/cardview_dark_background"
                        android:text="@string/settings"
                        android:textColor="@android:color/black" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/extra_btn"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/accadamyicorn0"
                        android:drawableTint="@color/cardview_dark_background"
                        android:text="@string/academy"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />

                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thirdrow">

                <androidx.cardview.widget.CardView
                    android:id="@+id/Adadmin_btn"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@android:drawable/ic_menu_edit"
                        android:drawableTint="@color/cardview_dark_background"
                        android:text="@string/manage"
                        android:textColor="@android:color/black" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/manage_Btn"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/icorn_addprofile48"
                        android:drawableTint="@color/cardview_dark_background"
                        android:text="@string/add_admin"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />

                </androidx.cardview.widget.CardView>

            </TableRow>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
